# oop

oop_exercise_01/: CMakeLists.txt  main.cpp  report.doc.docx  test_01.txt  test_02.txt  test_03.txt
oop_exercise_02/: CMakeLists.txt  main.cpp  report2.doc.docx  test_01.txt  test_02.txt  test_03.txt
oop_exercise_03/: CMakeLists.txt  main.cpp  report3.doc.docx  test_01.txt  test_02.txt  test_03.txt
oop_exercise_04/: Rhomb.h  Tnode.h  Tree.h  main.cpp  report4.doc.docx  test_01.txt  test_02.txt
oop_exercise_05/: CMakeLists.txt  main.cpp  queue.h  report5.doc.docx  test_01.txt  test_03.txt  triangle.h  vector.h  vertex.h
oop_exercise_06/: CMakeLists.txt  allocator.h  geometry_vector.h  main.cpp  map_test.cpp  queue.h  report6.doc.docx  test_02.txt  triangle.h  vector.h
oop_exercise_07/: document.h  factory.h  figure.h  hexagon.h  pentagon.h  report7.doc.docx  rhombus.h  test1.txt  test2.txt
oop_exercise_08/: CMakeLists.txt  factory.h  figures.h  main.cpp  report8.doc.docx  subscriber.h  test_01.txt  test_02.txt
